# deepseek4pdf

./: .pre-commit-config.yaml  README.md  pyproject.toml
examples/: chat_with_pdf.py  simple_query.py
src/deepseek4pdf/: __init__.py  core.py  exceptions.py  utils.py
tests/: conftest.py  test_core.py
